Fixed nav bar overflow

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ nav {
   opacity: 0.9;
   background-color: gray;
   position: fixed;
-  overflow: auto;
+  overflow: visible;
   width: 100%;
   z-index: 100;
 }
@@ -414,4 +414,3 @@ li.nav a.submenu_nav {
 .options:hover .dropdown_options {
     display: block;
 }
-
